// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Signup /> matches its snapshot with error 1`] = `
<form
  action={undefined}
  className="ui error form"
  onSubmit={[Function]}
>
  <div
    className="field"
  >
    <label
      htmlFor={undefined}
    >
      Email
    </label>
    <div
      className="ui input"
      content={undefined}
    >
      <input
        disabled={undefined}
        name="email"
        onChange={[Function]}
        placeholder="john@smith.com"
        required={undefined}
        tabIndex={undefined}
        type="text"
      />
    </div>
  </div>
  <div
    className="ui error message"
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        Error
      </div>
      <p>
        Email already in use
      </p>
    </div>
  </div>
  <div
    className="ui labeled button"
    name="submit"
    onClick={[Function]}
  >
    <button
      className="ui button"
      disabled={undefined}
      tabIndex={0}
    >
       
    </button>
    <div
      className="ui left pointing basic label"
      onClick={[Function]}
    >
      Submit
    </div>
  </div>
</form>
`;

exports[`<Signup /> matches its snapshot without error 1`] = `
<form
  action={undefined}
  className="ui form"
  onSubmit={[Function]}
>
  <div
    className="field"
  >
    <label
      htmlFor={undefined}
    >
      Email
    </label>
    <div
      className="ui input"
      content={undefined}
    >
      <input
        disabled={undefined}
        name="email"
        onChange={[Function]}
        placeholder="john@smith.com"
        required={undefined}
        tabIndex={undefined}
        type="text"
      />
    </div>
  </div>
  <div
    className="ui error message"
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        Error
      </div>
      <p>
        Email already in use
      </p>
    </div>
  </div>
  <div
    className="ui labeled button"
    name="submit"
    onClick={[Function]}
  >
    <button
      className="ui button"
      disabled={undefined}
      tabIndex={0}
    >
       
    </button>
    <div
      className="ui left pointing basic label"
      onClick={[Function]}
    >
      Submit
    </div>
  </div>
</form>
`;
